--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,3 +5,11 @@
   border-radius: 6px;
   cursor: pointer;
 }
+
+.title {
+  margin: 0;
+  padding-left: 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
